--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     -->
 
     <meta name="theme-color" content="#ccc">
-    <link rel="apple-touch-icon" href="/android-chrome-192x192/android-chrome-192x192.png">
-    <link rel="apple-touch-icon" href="/android-chrome-192x192/android-chrome-512x512.png">
+    <link rel="apple-touch-icon" href="/favicons/android-chrome-192x192.png">
+    <link rel="apple-touch-icon" href="/favicons/android-chrome-512x512.png">
 
-    <title>testPWA Home</title>
-    <link rel="shortcut icon" href="favicon.ico"> 
+    <title>test2 Home</title>
+   <!--  -->  
+   <link rel="shortcut icon" href="/favicons/favicon.ico">
     
 	<link rel="stylesheet" href="styles.css">
 
