--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <ul class="menu">
 
-    <li><a href="/testPWA/index.html">Home</a></li>
-    <li><a href="/testPWA/about.html">About</a></li>
+    <li><a href="/test2/index.html">Home</a></li>
+    <li><a href="/test2/about.html">About</a></li>
     
 </ul>
 
